# ScholarScout-ai-research-assistant-

./: .gitattributes  .gitignore  LICENSE  README.md  ai_research_assistant.ipynb  pyproject.toml  requirements.txt  streamlit_app.py
